--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.36.0",
+    "@azure/msal-react": "^1.5.6",
     "axios": "^1.3.5",
     "cors": "^2.8.5",
     "daisyui": "^2.51.5",
