--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.0.1",
     "@azure/msal-browser": "^2.36.0",
     "@azure/msal-react": "^1.5.6",
     "axios": "^1.3.5",
@@ -17,6 +18,8 @@
     "daisyui": "^2.51.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.0.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
