--- a/conf.d/my_conf.conf
+++ b/conf.d/my_conf.conf
@@ -1,9 +1,12 @@
 server {
-  listen 80;
-  server_name example.com;
-  # Specifies the maximum size of client request body that can be accepted by the server
+  listen 8080;
   client_max_body_size 50m;
+
   location / {
-    proxy_pass http://app:3000;
+    proxy_pass http://app:3001;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 }
