Revert "added github username"
This reverts commit d6da6cc2c4e52cc7b6d5a850f33392c2d76c1c8c.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,14 @@ networks:
   my_network:
 
 services:
+  vite:
+    build:
+      context: .
+      dockerfile: Dockerfile.vite
+    env_file:
+      - .env
+    ports:
+      - 5173:5173
   app:
     build:
       context: .
