--- a/conf.d/my_conf.conf
+++ b/conf.d/my_conf.conf
@@ -29,7 +29,7 @@ location /socket.io/ {
   proxy_set_header X-Forwarded-Proto $scheme;
   proxy_http_version 1.1;
   proxy_set_header Upgrade $http_upgrade;
-  proxy_set_header Connection "upgrade";
+  proxy_set_header Connection $http_connection;
   proxy_cache_bypass $http_upgrade;
 
   # Add this line
