--- a/conf.d/my_conf.conf
+++ b/conf.d/my_conf.conf
@@ -1,38 +1,9 @@
 server {
-  listen 8080;
+  listen 80;
+  server_name example.com;
+  # Specifies the maximum size of client request body that can be accepted by the server
   client_max_body_size 50m;
-
-location /api/ {
-  proxy_pass http://app:3001;
-  proxy_set_header Host $host;
-  proxy_set_header X-Real-IP $remote_addr;
-  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_set_header X-Forwarded-Proto $scheme;
-}
-
-  location /vite/ {
-    proxy_pass http://vite:5173/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
+  location / {
+    proxy_pass http://app:3000;
   }
-
-location /socket.io/ {
-  proxy_pass http://app:3001/socket.io/;
-  proxy_set_header Host $host;
-  proxy_set_header X-Real-IP $remote_addr;
-  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_set_header X-Forwarded-Proto $scheme;
-  proxy_http_version 1.1;
-  proxy_set_header Upgrade $http_upgrade;
-  proxy_set_header Connection $http_connection;
-  proxy_cache_bypass $http_upgrade;
-
-  # Add this line
-  proxy_set_header        X-NginX-Proxy true;
-}
 }
