Furthest i've gotten with nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       - .env
     ports:
       - 5173:5173
+    networks:
+      - my_network
+
   app:
     build:
       context: .
@@ -20,6 +23,8 @@ services:
       - .env
     deploy:
       replicas: 10
+    networks:
+      - my_network
 
   nginx:
     image: nginx
@@ -29,4 +34,5 @@ services:
       - app
     ports:
       - 8080:8080
-
+    networks:
+      - my_network
