--- a/conf.d/my_conf.conf
+++ b/conf.d/my_conf.conf
@@ -1,9 +1,25 @@
-server {
-  listen 80;
-  server_name example.com;
-  # Specifies the maximum size of client request body that can be accepted by the server
-  client_max_body_size 50m;
-  location / {
-    proxy_pass http://app:3000;
-  }
+
+    upstream app_upstream {
+    server app:3001;
 }
+
+    server {
+        listen 8080;
+
+        location /socket.io/ {
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass http://app_upstream/socket.io/;
+        }
+        location /messages {
+    proxy_pass http://app_upstream;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+}
+        # Other configuration settings...
+    }
