--- a/conf.d/my_conf.conf
+++ b/conf.d/my_conf.conf
@@ -1,25 +1,34 @@
-
-    upstream app_upstream {
+upstream app_upstream {
     server app:3001;
 }
 
-    server {
-        listen 8080;
+server {
+    listen 8080;
 
-        location /socket.io/ {
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_pass http://app_upstream/socket.io/;
-        }
-        location /messages {
-    proxy_pass http://app_upstream;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-}
-        # Other configuration settings...
+    location / {
+        proxy_pass http://app_upstream;
+        add_header Access-Control-Allow-Origin http://localhost:5173;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    location /socket.io/ {
+        proxy_pass http://app_upstream;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /messages {
+        proxy_pass http://app_upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        add_header Access-Control-Allow-Origin http://localhost:5173;
+    }
+    # Other configuration settings...
+}
